--- a/CalorieConverter.xaml
+++ b/CalorieConverter.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GetHealthyApp.CalorieConverter">
+             x:Class="GetHealthy.CalorieConverter">
 
     <!-- Dividing space into a 9*6 Grid -->
     <Grid BackgroundColor="Beige">
