--- a/EnterWeight.xaml
+++ b/EnterWeight.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GetHealthyApp.EnterWeight">
+             x:Class="GetHealthy.EnterWeight">
+
     <!-- Dividing space into a 9*6 Grid -->
     <Grid BackgroundColor="Beige">
         <Grid.RowDefinitions>
@@ -136,6 +137,5 @@
         <Label x:Name="lblCWeight" IsVisible="False"></Label>
         <Label x:Name="lblTWeight" IsVisible="False"></Label>
         <Label x:Name="lblTDate" IsVisible="False"></Label>
-
     </Grid>
 </ContentPage>
