--- a/GetHealthy/GetHealthy/EnterWeight.xaml
+++ b/GetHealthy/GetHealthy/EnterWeight.xaml
@@ -3,18 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GetHealthy.EnterWeight">
 
-    <!-- Dividing space into a 5*2 Grid -->
+    <!-- Dividing space into a 9*6 Grid -->
     <Grid BackgroundColor="Beige">
         <Grid.RowDefinitions>
+            <RowDefinition Height="1.7*" />
+            <RowDefinition Height="1.2*" />
+            <RowDefinition Height="1.2*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="1.4*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -26,76 +25,70 @@
         </Grid.ColumnDefinitions>
 
         <Image x:Name="imageLogo" Source="logo.png" Aspect="Fill"
-               Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Grid.ColumnSpan="4" >
+               Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="4" >
         </Image>
 
         <!-- Button to click -->
         <Button x:Name="btnHome" BackgroundColor="LightBlue" 
                 BorderColor="Black"
                 Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                Text="Home"
-                Clicked="btnHomeClicked"  NavigationPage.HasNavigationBar="True">
+                Text="Home" Clicked="BtnHomeClicked"
+                NavigationPage.HasNavigationBar="True">
         </Button>
         <Button x:Name="btnConverter" BackgroundColor="LightBlue"
                 BorderColor="Black"
                 Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                Text="Calorie Converter"
-                Clicked="btnConverterClicked" NavigationPage.HasNavigationBar="True">
+                Text="Calorie Converter" Clicked="BtnConverterClicked" 
+                NavigationPage.HasNavigationBar="True">
         </Button>
         <Button x:Name="btnFoodDiary" BackgroundColor="LightBlue"
                 BorderColor="Black"
-                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                Text="Food Diary"
-                Clicked="btnFoodDiaryClicked" NavigationPage.HasNavigationBar="True">
-        </Button>
-        <Button x:Name="btnExercise" BackgroundColor="LightBlue"
-                BorderColor="Black" 
-                Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="2"
-                Text="Enter Exercise"
-                Clicked="btnExerciseClicked" NavigationPage.HasNavigationBar="True">
+                Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2"
+                Text="Food Diary" Clicked="BtnFoodDiaryClicked" 
+                NavigationPage.HasNavigationBar="True">
         </Button>
         <Button x:Name="btnWeight" BackgroundColor="Cyan"
                 BorderColor="Black"
-                Grid.Row="2" Grid.Column="4" Grid.ColumnSpan="2"
+                Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2"
                 Text="Enter Weight"
-                Clicked="btnWeightClicked">
+                Clicked="BtnWeightClicked">
         </Button>
 
         <!-- Weigh in Icons -->
         <Button x:Name="btnTarget"
                 BackgroundColor="LightBlue"
                 BorderColor="Black" BorderWidth="1"
-                Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
-                Text="Enter Target Weight" Clicked="btnTargetClicked">
+                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3"
+                Text="Enter Target Weight" Clicked="BtnTargetClicked">
         </Button>
 
         <Button x:Name="btnHistory"
                 BackgroundColor="LightBlue"
                 BorderColor="Black" BorderWidth="1"
-                Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3"
-                Text="History" Clicked="btnHistoryClicked">
+                Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="3"
+                Text="History" Clicked="BtnHistoryClicked">
         </Button>
 
         <Label x:Name="lblCurrentWeight"
-               Grid.Row="4" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="4"
-               VerticalTextAlignment="Center" HorizontalTextAlignment="Start"
-               Margin="10" FontSize="Medium">
+               Grid.Row="3" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="4"
+               VerticalTextAlignment="Start" HorizontalTextAlignment="Start"
+               Margin="10, 10, 0, 0" FontSize="Medium">
         </Label>
 
         <Label x:Name="lblDifference"
-               Grid.Row="4" Grid.Column="3" Grid.RowSpan="2" Grid.ColumnSpan="3"
+               Grid.Row="3" Grid.Column="3" Grid.RowSpan="2" Grid.ColumnSpan="3"
                VerticalTextAlignment="Start" HorizontalTextAlignment="Center"
                Margin="10" FontSize="Medium">
         </Label>
 
         <Label x:Name="lblResult"
-               Grid.Row="5" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="6"
+               Grid.Row="4" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="6"
                VerticalTextAlignment="Center" HorizontalTextAlignment="Center"
                Margin="10" FontSize="Medium">
         </Label>
 
         <Entry x:Name="entryField"
-                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6"
+                Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="6"
                 VerticalOptions="Center" HorizontalTextAlignment="Center" 
                 Placeholder="Enter weight here">
         </Entry>
@@ -103,41 +96,46 @@
         <Button x:Name="btnAddWeight"
                 BackgroundColor="LightBlue"
                 BorderColor="Black" BorderWidth="1"
-                Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6"
-                Text="Add Weight" Clicked="btnAddWeightClicked">
+                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6"
+                Text="Add Weight" Clicked="BtnAddWeightClicked">
         </Button>
 
         <!-- Target weight icons -->
         <Label x:Name="lblTargetDifference" IsVisible="False"
-               Grid.Row="4" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="6"
+               Grid.Row="3" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="6"
                VerticalTextAlignment="Center" HorizontalTextAlignment="Center"
                FontSize="Medium">
         </Label>
 
         <Entry x:Name="entryTargetWeight" IsVisible="False"
-                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="3"
+                Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3"
                 VerticalOptions="Center" HorizontalTextAlignment="Center"
                 Placeholder="Target">
         </Entry>
 
         <DatePicker x:Name="dateTargetWeight" IsVisible="False"
-                Grid.Row="8" Grid.Column="3" Grid.ColumnSpan="3"
+                Grid.Row="7" Grid.Column="3" Grid.ColumnSpan="3"
                 VerticalOptions="Center">
         </DatePicker>
 
         <Button x:Name="btnAddTargetWeight" IsVisible="False"
                 BackgroundColor="LightBlue"
                 BorderColor="Black" BorderWidth="1"
-                Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6"
-                Text="Add Target Weight" Clicked="btnAddTargetWeightClicked">
+                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6"
+                Text="Add Target Weight" Clicked="BtnAddTargetWeightClicked">
         </Button>
         <!-- End of Target weight icons -->
-        
+
         <!-- History icons -->
         <Label x:Name="lblHistory" IsVisible="False"
-               Grid.Row="4" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="6"
+               Grid.Row="3" Grid.Column="0" Grid.RowSpan="6" Grid.ColumnSpan="6"
                VerticalTextAlignment="Start" HorizontalTextAlignment="Start"
-               Margin="10">
+               Margin="10" FontSize="Medium">
         </Label>
+
+        <!-- Invisible labels, used to store values from database -->
+        <Label x:Name="lblCWeight" IsVisible="False"></Label>
+        <Label x:Name="lblTWeight" IsVisible="False"></Label>
+        <Label x:Name="lblTDate" IsVisible="False"></Label>
     </Grid>
 </ContentPage>
