--- a/GetHealthy/GetHealthy/MainPage.xaml
+++ b/GetHealthy/GetHealthy/MainPage.xaml
@@ -4,12 +4,11 @@
              xmlns:local="clr-namespace:GetHealthy"
              x:Class="GetHealthy.MainPage">
 
-    <!-- Dividing space into a 5*2 Grid -->
+    <!-- Dividing space into a 9*6 Grid -->
     <Grid BackgroundColor="Beige">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="1.5*" />
+            <RowDefinition Height="1.1*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
@@ -18,7 +17,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -26,36 +26,62 @@
         </Grid.ColumnDefinitions>
 
         <Image x:Name="imageLogo" Source="logo.png" Aspect="Fill"
-               Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="4" >
+               Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="4" >
         </Image>
 
         <!-- Button to click -->
         <Button x:Name="btnHome" BackgroundColor="Cyan" 
                 BorderColor="Black"
-                Grid.Row="0" Grid.Column="0" Text="Home"
-                Clicked="btnHomeClicked"  NavigationPage.HasNavigationBar="True">
+                Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+                Text="Home">
         </Button>
         <Button x:Name="btnConverter" BackgroundColor="LightBlue"
                 BorderColor="Black"
-                Grid.Row="1" Grid.Column="0" Text="Calorie Converter"
-                Clicked="btnConverterClicked" NavigationPage.HasNavigationBar="True">
+                Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                Text="Calorie Converter" Clicked="BtnConverterClicked" 
+                NavigationPage.HasNavigationBar="True">
         </Button>
         <Button x:Name="btnFoodDiary" BackgroundColor="LightBlue"
                 BorderColor="Black"
-                Grid.Row="2" Grid.Column="0" Text="Food Diary"
-                Clicked="btnFoodDiaryClicked" NavigationPage.HasNavigationBar="True">
-        </Button>
-        <Button x:Name="btnExercise" BackgroundColor="LightBlue"
-                BorderColor="Black" 
-                Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
-                Text="Enter Exercise"
-                Clicked="btnExerciseClicked" NavigationPage.HasNavigationBar="True">
+                Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2"
+                Text="Food Diary" Clicked="BtnFoodDiaryClicked" 
+                NavigationPage.HasNavigationBar="True">
         </Button>
         <Button x:Name="btnWeight" BackgroundColor="LightBlue"
                 BorderColor="Black"
-                Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2"
-                Text="Enter Weight"
-                Clicked="btnWeightClicked" NavigationPage.HasNavigationBar="True">
+                Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="2"
+                Text="Enter Weight" Clicked="BtnWeightClicked" 
+                NavigationPage.HasNavigationBar="True">
         </Button>
+        <Button x:Name="btnCamera" BackgroundColor="LightBlue"
+                BorderColor="Black"
+                Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="6"
+                Text="Upload Photo" Clicked="BtnCameraClicked" 
+                NavigationPage.HasNavigationBar="True">
+        </Button>
+
+
+        <Label x:Name="lblAbout"
+                Grid.Row="3" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="6"
+                VerticalTextAlignment="Center" HorizontalTextAlignment="Start"
+                Margin="10" FontSize="Medium">
+        </Label>
+
+        <Label Text="Contact Information: &#128222; 0800 GET HEALTHY"
+                Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="6"
+                VerticalTextAlignment="Center" HorizontalTextAlignment="End"
+                Margin="10">
+        </Label>
+
+        <Label Text="&#9993; info@gethealthy.com"
+                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6"
+                VerticalTextAlignment="Center" HorizontalTextAlignment="End"
+                Margin="10">
+        </Label>
+
+        <Label Text="&#x00A9; GetHealthy 2017"
+                Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6"
+                VerticalTextAlignment="Center" HorizontalTextAlignment="Center">
+        </Label>
     </Grid>
 </ContentPage>
