--- a/GetHealthy/GetHealthy/FoodDiary.xaml
+++ b/GetHealthy/GetHealthy/FoodDiary.xaml
@@ -25,6 +25,10 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
+        <Image x:Name="imageBackground" Source="background.jpg" Aspect="Fill" Opacity="0.5"
+               Grid.Row="0" Grid.Column="0" Grid.RowSpan="9" Grid.ColumnSpan="6" >
+        </Image>
+        
         <Image x:Name="imageLogo" Source="logo.png" Aspect="Fill"
                Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="4" >
         </Image>
@@ -83,27 +87,27 @@
         </Entry>
 
         <Label x:Name="lblError"
-               Grid.Row="5" Grid.Column="0" Grid.RowSpan="5" Grid.ColumnSpan="6"
+               Grid.Row="5" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="6"
                VerticalTextAlignment="Start" HorizontalTextAlignment="Start"
                Margin="10" FontSize="Medium">
         </Label>
 
+        <!-- Dividing display into 2 columns by using 2 labels -->
         <Label x:Name="lblDisplay1"
-               Grid.Row="6" Grid.Column="0" Grid.RowSpan="4" Grid.ColumnSpan="2"
+               Grid.Row="6" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2"
                VerticalTextAlignment="Start" HorizontalTextAlignment="Start"
                Margin="10" FontSize="Medium">
         </Label>
 
         <Label x:Name="lblDisplay2"
-               Grid.Row="6" Grid.Column="2" Grid.RowSpan="4" Grid.ColumnSpan="2"
+               Grid.Row="6" Grid.Column="2" Grid.RowSpan="3" Grid.ColumnSpan="2"
                VerticalTextAlignment="Start" HorizontalTextAlignment="Start"
                Margin="10" FontSize="Medium">
         </Label>
 
-
         <Button x:Name="btnSubmit" BackgroundColor="LightBlue"
                 BorderColor="Black"
-                Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="6"
+                Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="6"
                 Text="Submit" Clicked="BtnSubmitClicked">
         </Button>
     </Grid>
